update egyptian extended

--- a/egyptian/extended/index.html
+++ b/egyptian/extended/index.html
@@ -89,7 +89,7 @@
 			<div id="u_134AF"><span class="hex">U+134AF</span><span class="dec">79023</span><span class="glyph">݁</span></div>
 			<div id="u_134B0"><span class="hex">U+134B0</span><span class="dec">79024</span><span class="glyph">Ⓥ</span></div>
 			<div id="u_134B1"><span class="hex">U+134B1</span><span class="dec">79025</span><span class="glyph">Ⓧ</span></div>
-			<div id="u_134B2"><span class="hex">U+134B2</span><span class="dec">79026</span><span class="glyph">FAX</span></div>
+			<div id="u_134B2"><span class="hex">U+134B2</span><span class="dec">79026</span><span class="glyph">℻</span></div>
 			<div id="u_134B3"><span class="hex">U+134B3</span><span class="dec">79027</span><span class="glyph">ޒ</span></div>
 			<div id="u_134B4"><span class="hex">U+134B4</span><span class="dec">79028</span><span class="glyph">ῂ</span></div>
 			<div id="u_134B5"><span class="hex">U+134B5</span><span class="dec">79029</span><span class="glyph">Ở</span></div>
@@ -267,7 +267,7 @@
 			<div id="u_13561"><span class="hex">U+13561</span><span class="dec">79201</span><span class="glyph">⓲</span></div>
 			<div id="u_13562"><span class="hex">U+13562</span><span class="dec">79202</span><span class="glyph">⓳</span></div>
 			<div id="u_13563"><span class="hex">U+13563</span><span class="dec">79203</span><span class="glyph">ܭ</span></div>
-			<div id="u_13564"><span class="hex">U+13564</span><span class="dec">79204</span><span class="glyph">!?</span></div>
+			<div id="u_13564"><span class="hex">U+13564</span><span class="dec">79204</span><span class="glyph">⁉</span></div>
 			<div id="u_13565"><span class="hex">U+13565</span><span class="dec">79205</span><span class="glyph">͛</span></div>
 			<div id="u_13566"><span class="hex">U+13566</span><span class="dec">79206</span><span class="glyph">ᕴ</span></div>
 			<div id="u_13567"><span class="hex">U+13567</span><span class="dec">79207</span><span class="glyph">͙</span></div>
@@ -294,7 +294,7 @@
 			<div id="u_1357C"><span class="hex">U+1357C</span><span class="dec">79228</span><span class="glyph">ޥ</span></div>
 			<div id="u_1357D"><span class="hex">U+1357D</span><span class="dec">79229</span><span class="glyph">ͫ</span></div>
 			<div id="u_1357E"><span class="hex">U+1357E</span><span class="dec">79230</span><span class="glyph">⓶</span></div>
-			<div id="u_1357F"><span class="hex">U+1357F</span><span class="dec">79231</span><span class="glyph">Υ</span></div>
+			<div id="u_1357F"><span class="hex">U+1357F</span><span class="dec">79231</span><span class="glyph">ϒ</span></div>
 			<div id="u_13580"><span class="hex">U+13580</span><span class="dec">79232</span><span class="glyph">࠿</span></div>
 			<div id="u_13581"><span class="hex">U+13581</span><span class="dec">79233</span><span class="glyph">ͬ</span></div>
 			<div id="u_13582"><span class="hex">U+13582</span><span class="dec">79234</span><span class="glyph">⓸</span></div>
@@ -433,7 +433,7 @@
 			<div id="u_13607"><span class="hex">U+13607</span><span class="dec">79367</span><span class="glyph">ΰ</span></div>
 			<div id="u_13608"><span class="hex">U+13608</span><span class="dec">79368</span><span class="glyph">ࠡ</span></div>
 			<div id="u_13609"><span class="hex">U+13609</span><span class="dec">79369</span><span class="glyph">α</span></div>
-			<div id="u_1360A"><span class="hex">U+1360A</span><span class="dec">79370</span><span class="glyph">°C</span></div>
+			<div id="u_1360A"><span class="hex">U+1360A</span><span class="dec">79370</span><span class="glyph">℃</span></div>
 			<div id="u_1360B"><span class="hex">U+1360B</span><span class="dec">79371</span><span class="glyph">ᾬ</span></div>
 			<div id="u_1360C"><span class="hex">U+1360C</span><span class="dec">79372</span><span class="glyph">β</span></div>
 			<div id="u_1360D"><span class="hex">U+1360D</span><span class="dec">79373</span><span class="glyph">γ</span></div>
@@ -950,15 +950,15 @@
 			<div id="u_1380C"><span class="hex">U+1380C</span><span class="dec">79884</span><span class="glyph">ফ</span></div>
 			<div id="u_1380D"><span class="hex">U+1380D</span><span class="dec">79885</span><span class="glyph">ব</span></div>
 			<div id="u_1380E"><span class="hex">U+1380E</span><span class="dec">79886</span><span class="glyph">ম</span></div>
-			<div id="u_1380F"><span class="hex">U+1380F</span><span class="dec">79887</span><span class="glyph">I</span></div>
-			<div id="u_13810"><span class="hex">U+13810</span><span class="dec">79888</span><span class="glyph">VII</span></div>
-			<div id="u_13811"><span class="hex">U+13811</span><span class="dec">79889</span><span class="glyph">II</span></div>
+			<div id="u_1380F"><span class="hex">U+1380F</span><span class="dec">79887</span><span class="glyph">Ⅰ</span></div>
+			<div id="u_13810"><span class="hex">U+13810</span><span class="dec">79888</span><span class="glyph">Ⅶ</span></div>
+			<div id="u_13811"><span class="hex">U+13811</span><span class="dec">79889</span><span class="glyph">Ⅱ</span></div>
 			<div id="u_13812"><span class="hex">U+13812</span><span class="dec">79890</span><span class="glyph">য</span></div>
 			<div id="u_13813"><span class="hex">U+13813</span><span class="dec">79891</span><span class="glyph">ૡ</span></div>
 			<div id="u_13814"><span class="hex">U+13814</span><span class="dec">79892</span><span class="glyph">র</span></div>
-			<div id="u_13815"><span class="hex">U+13815</span><span class="dec">79893</span><span class="glyph">VI</span></div>
+			<div id="u_13815"><span class="hex">U+13815</span><span class="dec">79893</span><span class="glyph">Ⅵ</span></div>
 			<div id="u_13816"><span class="hex">U+13816</span><span class="dec">79894</span><span class="glyph">ঐ</span></div>
-			<div id="u_13817"><span class="hex">U+13817</span><span class="dec">79895</span><span class="glyph">V</span></div>
+			<div id="u_13817"><span class="hex">U+13817</span><span class="dec">79895</span><span class="glyph">Ⅴ</span></div>
 			<div id="u_13818"><span class="hex">U+13818</span><span class="dec">79896</span><span class="glyph">⋵</span></div>
 			<div id="u_13819"><span class="hex">U+13819</span><span class="dec">79897</span><span class="glyph">⎗</span></div>
 			<div id="u_1381A"><span class="hex">U+1381A</span><span class="dec">79898</span><span class="glyph">╩</span></div>
@@ -1018,13 +1018,13 @@
 			<div id="u_13850"><span class="hex">U+13850</span><span class="dec">79952</span><span class="glyph">ᚐ</span></div>
 			<div id="u_13851"><span class="hex">U+13851</span><span class="dec">79953</span><span class="glyph">ँ</span></div>
 			<div id="u_13852"><span class="hex">U+13852</span><span class="dec">79954</span><span class="glyph">੄</span></div>
-			<div id="u_13853"><span class="hex">U+13853</span><span class="dec">79955</span><span class="glyph">L</span></div>
+			<div id="u_13853"><span class="hex">U+13853</span><span class="dec">79955</span><span class="glyph">Ⅼ</span></div>
 			<div id="u_13854"><span class="hex">U+13854</span><span class="dec">79956</span><span class="glyph">੷</span></div>
 			<div id="u_13855"><span class="hex">U+13855</span><span class="dec">79957</span><span class="glyph">ᛅ</span></div>
 			<div id="u_13856"><span class="hex">U+13856</span><span class="dec">79958</span><span class="glyph">ᙟ</span></div>
 			<div id="u_13857"><span class="hex">U+13857</span><span class="dec">79959</span><span class="glyph">ः</span></div>
 			<div id="u_13858"><span class="hex">U+13858</span><span class="dec">79960</span><span class="glyph">ᙡ</span></div>
-			<div id="u_13859"><span class="hex">U+13859</span><span class="dec">79961</span><span class="glyph">C</span></div>
+			<div id="u_13859"><span class="hex">U+13859</span><span class="dec">79961</span><span class="glyph">Ⅽ</span></div>
 			<div id="u_1385A"><span class="hex">U+1385A</span><span class="dec">79962</span><span class="glyph">ऄ</span></div>
 			<div id="u_1385B"><span class="hex">U+1385B</span><span class="dec">79963</span><span class="glyph">ᘟ</span></div>
 			<div id="u_1385C"><span class="hex">U+1385C</span><span class="dec">79964</span><span class="glyph">॔</span></div>
@@ -1129,10 +1129,10 @@
 			<div id="u_138BF"><span class="hex">U+138BF</span><span class="dec">80063</span><span class="glyph">ਂ</span></div>
 			<div id="u_138C0"><span class="hex">U+138C0</span><span class="dec">80064</span><span class="glyph">ऻ</span></div>
 			<div id="u_138C1"><span class="hex">U+138C1</span><span class="dec">80065</span><span class="glyph">Ắ</span></div>
-			<div id="u_138C2"><span class="hex">U+138C2</span><span class="dec">80066</span><span class="glyph">XII</span></div>
+			<div id="u_138C2"><span class="hex">U+138C2</span><span class="dec">80066</span><span class="glyph">Ⅻ</span></div>
 			<div id="u_138C3"><span class="hex">U+138C3</span><span class="dec">80067</span><span class="glyph">⌘</span></div>
 			<div id="u_138C4"><span class="hex">U+138C4</span><span class="dec">80068</span><span class="glyph">╾</span></div>
-			<div id="u_138C5"><span class="hex">U+138C5</span><span class="dec">80069</span><span class="glyph">XI</span></div>
+			<div id="u_138C5"><span class="hex">U+138C5</span><span class="dec">80069</span><span class="glyph">Ⅺ</span></div>
 			<div id="u_138C6"><span class="hex">U+138C6</span><span class="dec">80070</span><span class="glyph">∤</span></div>
 			<div id="u_138C7"><span class="hex">U+138C7</span><span class="dec">80071</span><span class="glyph">∵</span></div>
 			<div id="u_138C8"><span class="hex">U+138C8</span><span class="dec">80072</span><span class="glyph">਑</span></div>
@@ -1244,7 +1244,7 @@
 			<div id="u_13933"><span class="hex">U+13933</span><span class="dec">80179</span><span class="glyph">▇</span></div>
 			<div id="u_13934"><span class="hex">U+13934</span><span class="dec">80180</span><span class="glyph">█</span></div>
 			<div id="u_13935"><span class="hex">U+13935</span><span class="dec">80181</span><span class="glyph">ᜪ</span></div>
-			<div id="u_13936"><span class="hex">U+13936</span><span class="dec">80182</span><span class="glyph">M</span></div>
+			<div id="u_13936"><span class="hex">U+13936</span><span class="dec">80182</span><span class="glyph">Ⅿ</span></div>
 			<div id="u_13937"><span class="hex">U+13937</span><span class="dec">80183</span><span class="glyph">୫</span></div>
 			<div id="u_13938"><span class="hex">U+13938</span><span class="dec">80184</span><span class="glyph">⁦</span></div>
 			<div id="u_13939"><span class="hex">U+13939</span><span class="dec">80185</span><span class="glyph">⁤</span></div>
@@ -1364,19 +1364,19 @@
 			<div id="u_139AB"><span class="hex">U+139AB</span><span class="dec">80299</span><span class="glyph">૬</span></div>
 			<div id="u_139AC"><span class="hex">U+139AC</span><span class="dec">80300</span><span class="glyph">૰</span></div>
 			<div id="u_139AD"><span class="hex">U+139AD</span><span class="dec">80301</span><span class="glyph">᜾</span></div>
-			<div id="u_139AE"><span class="hex">U+139AE</span><span class="dec">80302</span><span class="glyph">viii</span></div>
+			<div id="u_139AE"><span class="hex">U+139AE</span><span class="dec">80302</span><span class="glyph">ⅷ</span></div>
 			<div id="u_139AF"><span class="hex">U+139AF</span><span class="dec">80303</span><span class="glyph">ᛕ</span></div>
 			<div id="u_139B0"><span class="hex">U+139B0</span><span class="dec">80304</span><span class="glyph">ஏ</span></div>
 			<div id="u_139B1"><span class="hex">U+139B1</span><span class="dec">80305</span><span class="glyph">■</span></div>
 			<div id="u_139B2"><span class="hex">U+139B2</span><span class="dec">80306</span><span class="glyph">∮∮</span></div>
 			<div id="u_139B3"><span class="hex">U+139B3</span><span class="dec">80307</span><span class="glyph">ṥ</span></div>
-			<div id="u_139B4"><span class="hex">U+139B4</span><span class="dec">80308</span><span class="glyph">ii</span></div>
-			<div id="u_139B5"><span class="hex">U+139B5</span><span class="dec">80309</span><span class="glyph">iii</span></div>
+			<div id="u_139B4"><span class="hex">U+139B4</span><span class="dec">80308</span><span class="glyph">ⅱ</span></div>
+			<div id="u_139B5"><span class="hex">U+139B5</span><span class="dec">80309</span><span class="glyph">ⅲ</span></div>
 			<div id="u_139B7"><span class="hex">U+139B7</span><span class="dec">80311</span><span class="glyph">ᛗ</span></div>
 			<div id="u_139B8"><span class="hex">U+139B8</span><span class="dec">80312</span><span class="glyph">▘</span></div>
 			<div id="u_139B9"><span class="hex">U+139B9</span><span class="dec">80313</span><span class="glyph">▙</span></div>
 			<div id="u_139BA"><span class="hex">U+139BA</span><span class="dec">80314</span><span class="glyph">ᛖ</span></div>
-			<div id="u_139BB"><span class="hex">U+139BB</span><span class="dec">80315</span><span class="glyph">xii</span></div>
+			<div id="u_139BB"><span class="hex">U+139BB</span><span class="dec">80315</span><span class="glyph">ⅻ</span></div>
 			<div id="u_139BC"><span class="hex">U+139BC</span><span class="dec">80316</span><span class="glyph">ஸ</span></div>
 			<div id="u_139BD"><span class="hex">U+139BD</span><span class="dec">80317</span><span class="glyph">ᜒ</span></div>
 			<div id="u_139BE"><span class="hex">U+139BE</span><span class="dec">80318</span><span class="glyph">᜔</span></div>
@@ -1442,7 +1442,7 @@
 			<div id="u_139FA"><span class="hex">U+139FA</span><span class="dec">80378</span><span class="glyph">□</span></div>
 			<div id="u_139FB"><span class="hex">U+139FB</span><span class="dec">80379</span><span class="glyph">ᛚ</span></div>
 			<div id="u_139FC"><span class="hex">U+139FC</span><span class="dec">80380</span><span class="glyph">ଲ</span></div>
-			<div id="u_139FD"><span class="hex">U+139FD</span><span class="dec">80381</span><span class="glyph">x</span></div>
+			<div id="u_139FD"><span class="hex">U+139FD</span><span class="dec">80381</span><span class="glyph">ⅹ</span></div>
 			<div id="u_139FE"><span class="hex">U+139FE</span><span class="dec">80382</span><span class="glyph">ଳ</span></div>
 			<div id="u_139FF"><span class="hex">U+139FF</span><span class="dec">80383</span><span class="glyph">◱</span></div>
 			<div id="u_13A00"><span class="hex">U+13A00</span><span class="dec">80384</span><span class="glyph">଺</span></div>
@@ -1550,7 +1550,7 @@
 			<div id="u_13A66"><span class="hex">U+13A66</span><span class="dec">80486</span><span class="glyph">▱</span></div>
 			<div id="u_13A67"><span class="hex">U+13A67</span><span class="dec">80487</span><span class="glyph">౗</span></div>
 			<div id="u_13A68"><span class="hex">U+13A68</span><span class="dec">80488</span><span class="glyph">ఔ</span></div>
-			<div id="u_13A69"><span class="hex">U+13A69</span><span class="dec">80489</span><span class="glyph">c</span></div>
+			<div id="u_13A69"><span class="hex">U+13A69</span><span class="dec">80489</span><span class="glyph">ⅽ</span></div>
 			<div id="u_13A6A"><span class="hex">U+13A6A</span><span class="dec">80490</span><span class="glyph">గ</span></div>
 			<div id="u_13A6B"><span class="hex">U+13A6B</span><span class="dec">80491</span><span class="glyph">ౖ</span></div>
 			<div id="u_13A6C"><span class="hex">U+13A6C</span><span class="dec">80492</span><span class="glyph">៉</span></div>
@@ -1561,7 +1561,7 @@
 			<div id="u_13A71"><span class="hex">U+13A71</span><span class="dec">80497</span><span class="glyph">ಊ</span></div>
 			<div id="u_13A72"><span class="hex">U+13A72</span><span class="dec">80498</span><span class="glyph">៘</span></div>
 			<div id="u_13A73"><span class="hex">U+13A73</span><span class="dec">80499</span><span class="glyph">▶</span></div>
-			<div id="u_13A74"><span class="hex">U+13A74</span><span class="dec">80500</span><span class="glyph">d</span></div>
+			<div id="u_13A74"><span class="hex">U+13A74</span><span class="dec">80500</span><span class="glyph">ⅾ</span></div>
 			<div id="u_13A75"><span class="hex">U+13A75</span><span class="dec">80501</span><span class="glyph">ை</span></div>
 			<div id="u_13A76"><span class="hex">U+13A76</span><span class="dec">80502</span><span class="glyph">ே</span></div>
 			<div id="u_13A77"><span class="hex">U+13A77</span><span class="dec">80503</span><span class="glyph">ౙ</span></div>
@@ -1602,7 +1602,7 @@
 			<div id="u_13A9A"><span class="hex">U+13A9A</span><span class="dec">80538</span><span class="glyph">᝭</span></div>
 			<div id="u_13A9B"><span class="hex">U+13A9B</span><span class="dec">80539</span><span class="glyph">౏</span></div>
 			<div id="u_13A9C"><span class="hex">U+13A9C</span><span class="dec">80540</span><span class="glyph">៑</span></div>
-			<div id="u_13A9D"><span class="hex">U+13A9D</span><span class="dec">80541</span><span class="glyph">m</span></div>
+			<div id="u_13A9D"><span class="hex">U+13A9D</span><span class="dec">80541</span><span class="glyph">ⅿ</span></div>
 			<div id="u_13A9E"><span class="hex">U+13A9E</span><span class="dec">80542</span><span class="glyph">ಌ</span></div>
 			<div id="u_13A9F"><span class="hex">U+13A9F</span><span class="dec">80543</span><span class="glyph">إ</span></div>
 			<div id="u_13AA0"><span class="hex">U+13AA0</span><span class="dec">80544</span><span class="glyph">⎲</span></div>
@@ -2897,7 +2897,7 @@
 			<div id="u_13FAA"><span class="hex">U+13FAA</span><span class="dec">81834</span><span class="glyph">ᄭ</span></div>
 			<div id="u_13FAB"><span class="hex">U+13FAB</span><span class="dec">81835</span><span class="glyph">ᄄ</span></div>
 			<div id="u_13FAC"><span class="hex">U+13FAC</span><span class="dec">81836</span><span class="glyph">᫄</span></div>
-			<div id="u_13FAD"><span class="hex">U+13FAD</span><span class="dec">81837</span><span class="glyph">a/c</span></div>
+			<div id="u_13FAD"><span class="hex">U+13FAD</span><span class="dec">81837</span><span class="glyph">℀</span></div>
 			<div id="u_13FAE"><span class="hex">U+13FAE</span><span class="dec">81838</span><span class="glyph">ᄃ</span></div>
 			<div id="u_13FAF"><span class="hex">U+13FAF</span><span class="dec">81839</span><span class="glyph">ᄂ</span></div>
 			<div id="u_13FB0"><span class="hex">U+13FB0</span><span class="dec">81840</span><span class="glyph">ჼ</span></div>
