--- a/coptic/crum/index.html
+++ b/coptic/crum/index.html
@@ -7,15 +7,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 	</head>
 	<body>
-		<h1>A Coptic Dictionary</h1>
-		<div id="menu">
-			<ul>
-				<li>Preface</li>
-				<li>List of Abbreviations</li>
-				<li>Additions and Corrections</li>
-				<li>Dictionary</li>
-			</ul>
-		</div>
+		<h1>A Coptic Dictionary — W. E. Crum</h1>
 		<div id="preface" class="collapse">
 			<h2>Preface</h2>
 			<p>Preparations for systematic work with a view to a Coptic dictionary were begun by me some thirty years ago, but intervening undertakings delayed effective progress for some time. Meanwhile it was ascertained that the Clarendon Press would be not unwilling to consider, when the time came, a project of publication. But early in 1914 a definite proposal to publish, at their expense and with provision of funds for collaboration, photography &amp;c., came from the Berlin Academy. This generous offer I owed to Professor Erman, who saw the need of a Coptic dictionary on a scale worthy of that of the hieroglyphic <i>Wörterbuch</i> and who issued a statement on the subject. <sup id="cite_ref-01"><a href="#cite_note-01">[1]</a></sup> A scheme was drawn up and work begun <sup id="cite_ref-02"><a href="#cite_note-02">[2]</a></sup> and if the outbreak of war had not put an end to all hopes of carrying through such projects, the book would have been completed long ere now. Yet it was found possible to retain the help of German collaborators, as well as of those in the allied countries, and a few years after the end of the war a collection of material had been amassed large enough to justify a renewal of negotiations with the Clarendon Press. These resulted in the arrangement whereby the dictionary is now published.</p>
