update japanese handbook

--- a/japanese/handbook/index.html
+++ b/japanese/handbook/index.html
@@ -25,6 +25,6 @@
 			</ul>
 		</div>
 		<div id="generate-card"></div>
-		<script src="./scripts/content.js"></script>
+		<script src="./scripts/scripts.js"></script>
 	</body>
 </html>
