--- a/coptic/lambdin/index.html
+++ b/coptic/lambdin/index.html
@@ -1,5 +1,7 @@
+<!DOCTYPE html>
 <html>
 	<head>
+		<title>Lambdin (1983)</title>
 		<link rel="stylesheet" href="./styles/styles.css">
 	</head>
 	<body>
@@ -47,11 +49,11 @@
 			<h2 >Preface</h2>
 			<p class="indented">The present work is an expansion of a series of elementary lessons developed gradually during twenty years of teaching Sahidic Coptic at the college level. The Lessons are designed to provide a carefully graded introduction to the basic grammar and vocabulary of the language. The content of the Lessons and the mode of presentation were dictated by purely practical pedagogical considerations; the book is in no way intended to be a scientific reference grammar. The Reading Selections are furnished with glosses designed to facilitate the translation to unsimplified material. A thorough mastery of these and the Lessons will bring the student to the level at which any Sahidic text of average difficulty can be read with no trouble. The emphasis on basic matters has necessitated the omission of much technical linguistic data not immediately relevant to the needs of the average beginning student. Those who are interested in a detailed study of the phonology, in the relationship of Sahidic to the other Coptic dialects, or in the historical development of Coptic from ancient Egyptian may consult the standard works on these subjects as cited in the Bibliography.</p>
 			<p class="indented">A special effort has been made to provide a Glossary that will be useful to the student beyond his first year's study. In addition to covering the words used in the present text, the Glossary is intended to contain the full vocabulary of the Sahidic New Testament, including most associated phrases and idioms, as well as a generous selection of lexical items from other Biblical and literary texts. Deliberately excluded from the Glossary are words of a specialized nature, such as the names of plants, vessels, implements, drugs, and animals occurring only in technical texts that usually provide little clue to their precise meanings; nor has any effort been made to include the unusual lexical usage of Shenute. For these items the reader must consult the indispensible <em>A Coptic Dictionary</em> of W. E. Crum, which, together with M. Wilmet, <em>Concordance du nouveau testament sahidique</em>, is the main authority for the Glossary included here.</p>
-			<p class="indented">I would like to express my sincere thanks to my colleague, George W. MacRae, the Charles Chauncey Stillman Professor of Roman Catholic Theological Studies, Harvard Divinity School, for encouraging me to undertake this work and for his helpful comments on a large portion of the manuscript; to Mr. Gary A. Bisbee, for the exceptional skill and care with which he prepared the final copy for publication; to Mr. Watson E. Mills, Director of the Mercer University Press, for his part in initiating and publishing this work.<br><br>Thomas O. Lambdin
+			<p class="indented">I would like to express my sincere thanks to my colleague, George W. MacRae, the Charles Chauncey Stillman Professor of Roman Catholic Theological Studies, Harvard Divinity School, for encouraging me to undertake this work and for his helpful comments on a large portion of the manuscript; to Mr. Gary A. Bisbee, for the exceptional skill and care with which he prepared the final copy for publication; to Mr. Watson E. Mills, Director of the Mercer University Press, for his part in initiating and publishing this work.<br><br>Thomas O. Lambdin</p><p>
 			<br>
 			Cambridge, Mass.
 			<br>
-			June <a id="19_2<" class="subchapter" href="#">19.2<</a>/p>
+			June <a id="19_2<" class="subchapter" href="#">19.2</a></p>
 		</div>
 		<div id="toc" class="section">
 			<h2>Table of Contents</h2>
@@ -59,22 +61,22 @@
 				<li><span>Preface</span><span>iii</span></li>
 				<li><span>Abbreviations and Conventions</span><span>vi</span></li>
 				<li><span>Introduction</span><span>vii</span></li>
-				<li><span>Lessons <a id="1–_0<" class="subchapter" href="#">1–.0<</a>/span><span>1</span></li>
+				<li><span>Lessons <a id="1–_0<" class="subchapter" href="#">1–.0</a></span><span>1</span></li>
 				<li><span>Reading Selections</span>
 					<ul>
-						<li><span>Introductory Remarks</span><span><a id="1_6<" class="subchapter" href="#">1.6<</a>/span></li>
-						<li><span>Luke I–V</span><span><a id="1_9<" class="subchapter" href="#">1.9<</a>/span></li>
-						<li><span>Apophthegmata Patrum</span><span><a id="1_1<" class="subchapter" href="#">1.1<</a>/span></li>
-						<li><span>Wisdom of Solomon</span><span><a id="1_5<" class="subchapter" href="#">1.5<</a>/span></li>
-						<li><span>The Life of Joseph the Carpenter</span><span><a id="1_6<" class="subchapter" href="#">1.6<</a>/span></li>
+						<li><span>Introductory Remarks</span><span><a id="1_6<" class="subchapter" href="#">1.6</a></span></li>
+						<li><span>Luke I–V</span><span><a id="1_9<" class="subchapter" href="#">1.9</a></span></li>
+						<li><span>Apophthegmata Patrum</span><span><a id="1_1<" class="subchapter" href="#">1.1</a></span></li>
+						<li><span>Wisdom of Solomon</span><span><a id="1_5<" class="subchapter" href="#">1.5</a></span></li>
+						<li><span>The Life of Joseph the Carpenter</span><span><a id="1_6<" class="subchapter" href="#">1.6</a></span></li>
 					</ul>
 				</li>
-				<li><span>Glossary</span><span><a id="2_9<" class="subchapter" href="#">2.9<</a>/span></li>
-				<li><span>Glossary of Greek Words</span><span><a id="3_9<" class="subchapter" href="#">3.9<</a>/span></li>
-				<li><span>Bibliography</span><span><a id="3_4<" class="subchapter" href="#">3.4<</a>/span></li>
-				<li><span>Grammatical Index</span><span><a id="3_6<" class="subchapter" href="#">3.6<</a>/span></li>
-				<li><span>Table of Principal Verbal Conjugations</span><span><a id="3_1<" class="subchapter" href="#">3.1<</a>/span></li>
-				<li><span>Subject Index</span><span><a id="3_3<" class="subchapter" href="#">3.3<</a>/span></li>
+				<li><span>Glossary</span><span><a id="2_9<" class="subchapter" href="#">2.9</a></span></li>
+				<li><span>Glossary of Greek Words</span><span><a id="3_9<" class="subchapter" href="#">3.9</a></span></li>
+				<li><span>Bibliography</span><span><a id="3_4<" class="subchapter" href="#">3.4</a></span></li>
+				<li><span>Grammatical Index</span><span><a id="3_6<" class="subchapter" href="#">3.6</a></span></li>
+				<li><span>Table of Principal Verbal Conjugations</span><span><a id="3_1<" class="subchapter" href="#">3.1</a></span></li>
+				<li><span>Subject Index</span><span><a id="3_3<" class="subchapter" href="#">3.3</a></span></li>
 			</ul>
 		</div>
 		<div id="abbrv_and_conv" class="section">
@@ -9458,5 +9460,7 @@
 				<li><span class="c">ⲛⲟⲩϩⲙ̄</span> vb. tr. to rescue, save.</li>
 			</ol>
 		</div>
+		<script src="../../scripts/scripts.js"></script>
+		<script src="./scripts/scripts.js"></script>
 	</body>
 </html>
